--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/sometype-mono": "^5.0.1",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
+    "@mui/x-date-pickers": "^6.19.4",
+    "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "mui-one-time-password-input": "^2.0.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-cookie": "^7.0.2",
+    "react-dom": "^18",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "eslint": "^8",
