--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/sometype-mono": "^5.0.1",
+    "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
     "@mui/x-date-pickers": "^6.19.4",
@@ -23,7 +24,8 @@
     "react": "^18",
     "react-cookie": "^7.0.2",
     "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
