--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "react-cookie": "^7.0.2",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "eslint": "^8",
